--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600&family=Rock+Salt&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
