--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
@@ -36,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dromba's personal website</title>
+    <title>DPatrick's personal website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
