Update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="" />
+    <meta name="description" content="Just dive in" />
+
+    <meta property="og:title" content="DPatrick's personal website" />
+    <meta property="og:description" content="Just dive in" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo1200x630.png" />
+    <meta property="og:url" content="https://www.dpatrick.me/" />
+
+    <meta name="twitter:title" content="DPatrick's personal website " />
+    <meta name="twitter:description" content="Just dive in" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo1200x630.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
