--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 
     <meta property="og:title" content="DPatrick's personal website" />
     <meta property="og:description" content="Just dive in" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo1200x630.png" />
+    <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta property="og:url" content="https://www.dpatrick.me/" />
 
     <meta name="twitter:title" content="DPatrick's personal website " />
     <meta name="twitter:description" content="Just dive in" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo1200x630.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
