Update meta description and title

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Just dive in" />
+    <meta
+      name="description"
+      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+    />
 
-    <meta property="og:title" content="DPatrick's personal website" />
-    <meta property="og:description" content="Just dive in" />
+    <meta property="og:title" content="Thoughts and Stuff by DPatrick" />
+    <meta
+      property="og:description"
+      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+    />
     <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta property="og:url" content="https://www.dpatrick.me/" />
 
-    <meta name="twitter:title" content="DPatrick's personal website " />
-    <meta name="twitter:description" content="Just dive in" />
+    <meta name="twitter:title" content="Thoughts and Stuff by DPatrick" />
+    <meta
+      name="twitter:description"
+      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+    />
     <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
@@ -48,7 +57,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>DPatrick's personal website</title>
+    <title>Thoughts and Stuff by DPatrick</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
