--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
     />
 
     <meta property="og:title" content="Thoughts and Stuff by DPatrick" />
     <meta
       property="og:description"
-      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
     />
     <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta property="og:url" content="https://www.dpatrick.me/" />
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Thoughts and Stuff by DPatrick" />
     <meta
       name="twitter:description"
-      content="I gladly welcome you to personal website and blog by Domagoj Patrick Vidovic."
+      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
     />
     <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta name="twitter:card" content="summary_large_image" />
