--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
       content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
     />
 
-    <meta property="og:title" content="Thoughts and Stuff by DPatrick" />
+    <meta
+      property="og:title"
+      content="Rise Above - Personal Website by DPatrick"
+    />
     <meta
       property="og:description"
       content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
@@ -18,7 +21,10 @@
     <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta property="og:url" content="https://www.dpatrick.me/" />
 
-    <meta name="twitter:title" content="Thoughts and Stuff by DPatrick" />
+    <meta
+      name="twitter:title"
+      content="Rise Above - Personal Website by DPatrick"
+    />
     <meta
       name="twitter:description"
       content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
@@ -57,7 +63,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Thoughts and Stuff by DPatrick</title>
+    <title>Rise Above - Personal Website by DPatrick</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
