--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
+      content="Domagoj Vidovic, who is that chap? Where is he; what does he do; what goes through his mind?"
     />
 
     <meta
       property="og:title"
-      content="Rise Above - Personal Website by DPatrick"
+      content="Domagoj Vidovic - Personal Website And Blog"
     />
     <meta
       property="og:description"
-      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
+      content="I gladly welcome you to the personal website and blog by Domagoj Vidovic."
     />
     <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
-    <meta property="og:url" content="https://www.dpatrick.me/" />
+    <meta property="og:url" content="https://www.domagojvidovic.com/" />
 
     <meta
       name="twitter:title"
-      content="Rise Above - Personal Website by DPatrick"
+      content="Domagoj Vidovic - Personal Website And Blog"
     />
     <meta
       name="twitter:description"
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Rise Above - Personal Website by DPatrick</title>
+    <title>Domagoj Vidovic - Personal Website And Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
