Update content and layout

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Domagoj Vidovic, who is that chap? Where is he; what does he do; what goes through his mind?"
+      content="Aspiring London-based Frontend Engineer. I love to think, write, and code."
     />
 
     <meta
@@ -27,7 +27,7 @@
     />
     <meta
       name="twitter:description"
-      content="I gladly welcome you to the personal website and blog by Domagoj Patrick Vidovic."
+      content="I gladly welcome you to the personal website and blog by Domagoj Vidovic."
     />
     <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta name="twitter:card" content="summary_large_image" />
