--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aspiring London-based Frontend Engineer. I love to think, write, and code."
+      content="Frontend Engineer in a London tech-startup. Master Web Dev With Me."
     />
 
     <meta
