--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,10 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Domagoj Vidovic — Personal Website And Blog</title>
   </head>
