--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link href="./prism.css" rel="stylesheet" />
+    <link href="themes/prism-ghcolors.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Domagoj Vidovic — Personal Website And Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="./prism.js"></script>
   </body>
 </html>
