--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <meta
       property="og:title"
-      content="Domagoj Vidovic — Personal Website And Blog"
+      content="Personal Website And Blog — Domagoj Vidovic"
     />
     <meta
       property="og:description"
@@ -23,7 +23,7 @@
 
     <meta
       name="twitter:title"
-      content="Domagoj Vidovic — Personal Website And Blog"
+      content="Personal Website And Blog — Domagoj Vidovic"
     />
     <meta
       name="twitter:description"
@@ -46,7 +46,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Domagoj Vidovic — Personal Website And Blog</title>
+    <title>Personal Website And Blog — Domagoj Vidovic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
