--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Frontend Engineer in a London tech-startup. Master Web Dev With Me."
+      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
     />
 
     <meta
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:description"
-      content="I gladly welcome you to the personal website and blog by Domagoj Vidovic."
+      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
     />
     <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta property="og:url" content="https://www.domagojvidovic.com/" />
@@ -27,7 +27,7 @@
     />
     <meta
       name="twitter:description"
-      content="I gladly welcome you to the personal website and blog by Domagoj Vidovic."
+      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
     />
     <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
     <meta name="twitter:card" content="summary_large_image" />
