--- a/public/index.html
+++ b/public/index.html
@@ -7,29 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
+      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
     />
 
-    <meta
-      property="og:title"
-      content="Personal Website And Blog — Domagoj Vidovic"
-    />
+    <meta property="og:title" content="JavaScript Wizz — Domagoj Vidovic" />
     <meta
       property="og:description"
-      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
+      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
     />
-    <meta property="og:image" content="https://i.imgur.com/63zrOmd.png" />
+    <meta property="og:image" content="https://i.imgur.com/4zqQXe9.png" />
     <meta property="og:url" content="https://www.domagojvidovic.com/" />
 
-    <meta
-      name="twitter:title"
-      content="Personal Website And Blog — Domagoj Vidovic"
-    />
+    <meta name="twitter:title" content="JavaScript Wizz — Domagoj Vidovic" />
     <meta
       name="twitter:description"
-      content="Frontend Engineer, mentor, and speaker in a London tech startup. Sharing my thoughts and ideas."
+      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
     />
-    <meta name="twitter:image" content="https://i.imgur.com/63zrOmd.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/4zqQXe9.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -46,7 +40,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Personal Website And Blog — Domagoj Vidovic</title>
+    <title>JavaScript Wizz — Domagoj Vidovic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
