--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       property="og:description"
       content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
     />
-    <meta property="og:image" content="https://i.imgur.com/5Spkm5M.png" />
+    <meta property="og:image" content="https://i.imgur.com/lvEdL9Q.png" />
     <meta property="og:url" content="https://www.domagojvidovic.com/" />
 
     <meta name="twitter:title" content="JavaScript Wizz — Domagoj Vidovic" />
@@ -23,7 +23,7 @@
       name="twitter:description"
       content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
     />
-    <meta name="twitter:image" content="https://i.imgur.com/5Spkm5M.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/lvEdL9Q.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
