--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
+      content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
     />
 
     <meta property="og:title" content="JavaScript Wizz — Domagoj Vidovic" />
     <meta
       property="og:description"
-      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
+      content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
     />
     <meta property="og:image" content="https://i.imgur.com/lvEdL9Q.png" />
     <meta property="og:url" content="https://www.domagojvidovic.com/" />
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="JavaScript Wizz — Domagoj Vidovic" />
     <meta
       name="twitter:description"
-      content="Senior frontend engineer. Content creator. Mentor. Speaker. Let's create awesome stuff."
+      content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
     />
     <meta name="twitter:image" content="https://i.imgur.com/lvEdL9Q.png" />
     <meta name="twitter:card" content="summary_large_image" />
