--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
     />
 
-    <meta property="og:title" content="Tech Wizzdom — Domagoj Vidovic" />
+    <meta property="og:title" content="Tech Wizzdom — Domagoj Lalk Vidovic" />
     <meta
       property="og:description"
       content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://i.imgur.com/lvEdL9Q.png" />
     <meta property="og:url" content="https://www.domagojvidovic.com/" />
 
-    <meta name="twitter:title" content="Tech Wizzdom — Domagoj Vidovic" />
+    <meta name="twitter:title" content="Tech Wizzdom — Domagoj Lalk Vidovic" />
     <meta
       name="twitter:description"
       content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tech Wizzdom — Domagoj Vidovic</title>
+    <title>Tech Wizzdom — Domagoj Lalk Vidovic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
