--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       content="Senior frontend engineer turned into tech content creator and influencer. I make viral tech content."
     />
     <meta property="og:image" content="https://i.imgur.com/lvEdL9Q.png" />
-    <meta property="og:url" content="https://www.domagojvidovic.com/" />
+    <meta property="og:url" content="https://www.techwizzdom.com/" />
 
     <meta name="twitter:title" content="Tech Wizzdom — Domagoj Lalk Vidovic" />
     <meta
