--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Rock+Salt&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
