--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       property="og:description"
       content="A 9-5 senior frontend engineer turned into tech content creator, influencer and tech startup founder. I make viral technology content."
     />
-    <meta property="og:image" content="https://i.imgur.com/lvEdL9Q.png" />
+    <meta property="og:image" content="https://i.imgur.com/BsBbxEn.png" />
     <meta property="og:url" content="https://www.techwizzdom.com/" />
 
     <meta name="twitter:title" content="Tech Wizzdom — Domagoj Lalk Vidovic" />
@@ -23,7 +23,7 @@
       name="twitter:description"
       content="A 9-5 senior frontend engineer turned into tech content creator, influencer and tech startup founder. I make viral technology content."
     />
-    <meta name="twitter:image" content="https://i.imgur.com/lvEdL9Q.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/BsBbxEn.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
